fix:Java21対応で、SecurityManager を動的にインストールできるようにプロパティを追加（暫定対応）